<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editTextTextPersonName4"
        android:layout_width="356dp"
        android:layout_height="48dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="39dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3"
        android:autofillHints=""
        />

    <EditText
        android:id="@+id/editTextTextPersonName5"
        android:layout_width="356dp"
        android:layout_height="48dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="40dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName4" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="356dp"
        android:layout_height="48dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
        android:autofillHints="" />

    <ImageView
        android:id="@+id/vector_2"
        android:layout_width="185dp"
        android:layout_height="177dp"
        android:layout_marginStart="5dp"
        android:contentDescription="TODO"
        android:src="@drawable/vector_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/create_account"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/create_account"
        android:layout_width="206dp"
        android:layout_height="45dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="163dp"
        android:text="@string/create_account_string"
        android:textColor="@color/create_account_color"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="356dp"
        android:layout_height="48dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="Full Name"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_account" />


    <Button
        android:id="@+id/getstartedbtn"
        style="@style/AppTheme.RoundedCornerMaterialButton"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_marginStart="128dp"
        android:layout_marginBottom="80dp"
        android:text="@string/get_started"
        android:textColor="@color/white"
        app:backgroundTint="#DACFFC"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:rippleColor="#040303" />

    <Button
        android:id="@+id/signinbtn"
        style="@style/AppTheme.RoundedCornerMaterialButton"
        android:layout_width="145dp"
        android:layout_height="35dp"
        android:layout_marginStart="205dp"
        android:layout_marginBottom="20dp"
        android:text="@string/_sign_in_string"
        android:textColor="#DACFFC"
        android:textSize="14sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:rippleColor="#040303" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginBottom="26dp"
        android:text="@string/already_have_an_account__string"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>