<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <View
        android:id="@+id/ellipse_2_ek9"
        android:layout_width="109dp"
        android:layout_height="109dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/ellipse_2_ek1_shape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/ellipse_2_ek7"
        android:layout_width="109dp"
        android:layout_height="109dp"
        android:layout_marginStart="21dp"
        android:layout_marginBottom="146dp"
        android:background="@drawable/ellipse_2_ek1_shape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ellipse_2_ek8" />

    <View
        android:id="@+id/ellipse_2_ek8"
        android:layout_width="109dp"
        android:layout_height="109dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="83dp"
        android:background="@drawable/ellipse_2_ek1_shape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ellipse_2_ek9" />

    <View
        android:id="@+id/ellipse_2_ek4"
        android:layout_width="109dp"
        android:layout_height="109dp"
        android:layout_marginStart="21dp"
        android:layout_marginBottom="27dp"
        android:background="@drawable/ellipse_2_ek1_shape"
        app:layout_constraintBottom_toTopOf="@+id/ellipse_2_ek7"
        app:layout_constraintStart_toEndOf="@+id/ellipse_2_ek2" />

    <View
        android:id="@+id/ellipse_2_ek5"
        android:layout_width="109dp"
        android:layout_height="109dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="22dp"
        android:background="@drawable/ellipse_2_ek1_shape"
        app:layout_constraintBottom_toTopOf="@+id/ellipse_2_ek2"
        app:layout_constraintStart_toEndOf="@+id/ellipse_2_ek" />

    <View
        android:id="@+id/ellipse_2_ek2"
        android:layout_width="109dp"
        android:layout_height="109dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/ellipse_2_ek1_shape"
        app:layout_constraintBottom_toTopOf="@+id/ellipse_2_ek8"
        app:layout_constraintEnd_toStartOf="@+id/ellipse_2_ek7"
        app:layout_constraintStart_toEndOf="@+id/ellipse_2_ek" />

    <View
        android:id="@+id/ellipse_2_ek3"
        android:layout_width="109dp"
        android:layout_height="109dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/ellipse_2_ek1_shape"
        app:layout_constraintStart_toEndOf="@+id/ellipse_2_ek"
        app:layout_constraintTop_toBottomOf="@+id/select_the_categories_you_wish_to_use" />

    <View
        android:id="@+id/ellipse_2_ek"
        android:layout_width="109dp"
        android:layout_height="109dp"
        android:layout_marginStart="22dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/ellipse_2_ek1_shape"
        app:layout_constraintBottom_toTopOf="@+id/ellipse_2_ek1"
        app:layout_constraintStart_toStartOf="parent" />


    <ImageView
        android:id="@+id/vector_2"
        android:layout_width="168dp"
        android:layout_height="176dp"
        android:contentDescription="TODO"
        android:src="@drawable/vector_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/create_account"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/select_the_categories_you_wish_to_use"
        android:layout_width="306dp"
        android:layout_height="29dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="460dp"
        android:text="@string/select_the_categories_you_wish_to_use_string"
        android:textColor="@color/enter_your_monthly_budget_color"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/hello_parisa"
        android:layout_width="221dp"
        android:layout_height="59dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="164dp"
        android:text="@string/hello_parisa_string"
        android:textColor="@color/_8_40_am_color"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/enter_your_monthly_budget"
        android:layout_width="226dp"
        android:layout_height="29dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="71dp"
        android:text="@string/enter_your_monthly_budget_string"
        android:textColor="@color/enter_your_monthly_budget_color"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/select_the_categories_you_wish_to_use"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hello_parisa"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editTextaddbudget"
        android:layout_width="356dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="516dp"
        android:ems="10"
        android:hint="Monthly Budget"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RelativeLayout
        android:id="@+id/ellipse_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

    </RelativeLayout>

    <View
        android:id="@+id/ellipse_2_ek1"
        android:layout_width="109dp"
        android:layout_height="109dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="21dp"
        android:background="@drawable/ellipse_2_ek1_shape"
        app:layout_constraintBottom_toTopOf="@+id/ellipse_2_ek9"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/house"
        style="@style/AppTheme.RoundedCornerMaterialButton"
        android:layout_width="99dp"
        android:layout_height="48dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="510dp"
        android:background="?android:attr/selectableItemBackground"
        android:backgroundTint="@color/white"
        android:text="Housing"
        android:textColor="@color/housing"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/insurance"
        style="@style/AppTheme.RoundedCornerMaterialButton"
        android:layout_width="113dp"
        android:layout_height="48dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="634dp"
        android:background="?android:attr/selectableItemBackground"
        android:backgroundTint="@color/white"
        android:text="Insurance"
        android:textColor="@color/housing"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/sportevents"
        style="@style/AppTheme.RoundedCornerMaterialButton"
        android:layout_width="130dp"
        android:layout_height="56dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="758dp"
        android:background="?android:attr/selectableItemBackground"
        android:backgroundTint="@color/white"
        android:text="Sport Events"
        android:textColor="@color/housing"
        android:textSize="13dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/videogames"
        style="@style/AppTheme.RoundedCornerMaterialButton"
        android:layout_width="130dp"
        android:layout_height="56dp"
        android:layout_marginStart="132dp"
        android:layout_marginTop="695dp"
        android:background="?android:attr/selectableItemBackground"
        android:backgroundTint="@color/white"
        android:text="Video Games"
        android:textColor="@color/housing"
        android:textSize="13dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/utilities"
        style="@style/AppTheme.RoundedCornerMaterialButton"
        android:layout_width="130dp"
        android:layout_height="56dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="573dp"
        android:background="?android:attr/selectableItemBackground"
        android:backgroundTint="@color/white"
        android:text="Utilities"
        android:textColor="@color/housing"
        android:textSize="13dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/transportation"
        style="@style/AppTheme.RoundedCornerMaterialButton"
        android:layout_width="130dp"
        android:layout_height="56dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="436dp"
        android:background="?android:attr/selectableItemBackground"
        android:backgroundTint="@color/white"
        android:text="Transportation"
        android:textColor="@color/housing"
        android:textSize="11dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/food"
        style="@style/AppTheme.RoundedCornerMaterialButton"
        android:layout_width="130dp"
        android:layout_height="56dp"
        android:layout_marginStart="260dp"
        android:layout_marginTop="497dp"
        android:background="?android:attr/selectableItemBackground"
        android:backgroundTint="@color/white"
        android:text="Food"
        android:textColor="@color/housing"
        android:textSize="14dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/md"
        style="@style/AppTheme.RoundedCornerMaterialButton"
        android:layout_width="130dp"
        android:layout_height="56dp"
        android:layout_marginStart="262dp"
        android:layout_marginTop="630dp"
        android:background="?android:attr/selectableItemBackground"
        android:backgroundTint="@color/white"
        android:text="Medical"
        android:textColor="@color/housing"
        android:textSize="14dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/vector_ek1"
        android:layout_width="17dp"
        android:layout_height="16dp"
        android:layout_marginEnd="63dp"
        android:layout_marginBottom="50dp"
        android:contentDescription="vector_ek1"
        android:src="@drawable/vector_ek1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <Button
        android:id="@+id/start"
        style="@style/AppTheme.RoundedCornerMaterialButton"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginStart="264dp"
        android:layout_marginTop="752dp"
        android:background="?android:attr/selectableItemBackground"
        android:backgroundTint="@color/white"
        android:text="START"
        android:textColor="@color/housing"
        android:textSize="14dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/addcustom"
        style="@style/AppTheme.RoundedCornerMaterialButton"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginStart="208dp"
        android:layout_marginTop="780dp"
        android:background="?android:attr/selectableItemBackground"
        android:backgroundTint="@color/white"
        android:text="Add custom categories"
        android:textColor="#7249FF"
        android:textSize="10dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>